tests/invalid/Function_Invalid_17.whiley
function f(&{int f} p) -> bool:
    if p->f == 0:
        return false
    else:
        return true